--- a/package.json
+++ b/package.json
@@ -1,15 +1,1 @@
-{
-  "name": "shop-site",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
-}
+{"name":"shop-site","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"next":"^14.1.0","react":"^18.2.0","react-dom":"^18.2.0"},"devDependencies":{"typescript":"^5.4.0","@types/react":"^18.2.0","@types/node":"^20.11.0"}}
