--- a/package.json
+++ b/package.json
@@ -1,27 +1,1 @@
-{
-  "name": "natureswaysoil",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "npm run generate-products && next build",
-    "start": "next start",
-    "generate-products": "node scripts/generate-products.js"
-  },
-  "dependencies": {
-    "@stripe/react-stripe-js": "^2.6.0",
-    "@stripe/stripe-js": "^2.4.0",
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^16.0.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.4.5",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@types/node": "^20.11.30"
-  }
-}
+{"name":"shop-site","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"next":"^14.2.5","react":"^18.2.0","react-dom":"^18.2.0","@stripe/react-stripe-js":"^2.6.0","@stripe/stripe-js":"^2.4.0","stripe":"^16.0.0"},"devDependencies":{"typescript":"^5.4.5","@types/react":"^18.2.66","@types/react-dom":"^18.2.22","@types/node":"^20.11.30","autoprefixer":"^10.4.17","postcss":"^8.4.35","tailwindcss":"^3.4.7"}}
